--- a/logistic_regression_task1.ipynb
+++ b/logistic_regression_task1.ipynb
@@ -465,9 +465,9 @@
         "    d=abs(A*xi-yi+C)/np.sqrt(A**2+(-1)**2) #mx-y+c=0\n",
         "    check=(A*xi-yi+C)/-1 \n",
         "    if check>0:  # Given a point(xi,yi) and a line Ax+By+C=0. We would check the value of y on the line corresponding to xi,\n",
-        "      d=d        # i.e y=(-Axi-C)/B. The point would obviously be above the line if yi is greater than y. Therefore, yi-y>0 or, \n",
-        "    else:        # yi-(-Ax-C)/B>0 or, (Axi+Byi+C)/B>0. Therefore, The signs of Ax+By+C and B must be the same if the point is above the line.\n",
-        "      d=(-1)*d\n",
+        "      d=d        # i.e y=(-Axi-C)/B. The point would obviously be above the line if yi is greater than y. Therefore, yi-y>0 or,\n",
+        "    else:        # yi-(-Ax-C)/B>0 or, (Axi+Byi+C)/B>0. Therefore, the signs of Ax+By+C and B must be the same if the point is above\n",
+        "      d=(-1)*d   # the line.\n",
         "    if iris['species'][i] == 1:\n",
         "        dist.append(d)\n",
         "    else:\n",
